--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,24 @@
 body {
-  background: linear-gradient(
+  background: var(--background);
+  transition: background 0.3s ease-in-out;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+body.light {
+  --background: linear-gradient(
     360deg,
     rgb(255, 204, 168) 0%,
     rgb(185, 174, 190) 100%
   );
-  background-repeat: no-repeat;
-  height: 100vh;
+}
+
+body.dark {
+  --background: linear-gradient(
+    360deg,
+    rgb(116, 246, 168) 0%,
+    rgb(12, 21, 18) 100%
+  );
 }
 .App {
   max-width: 800px;
