--- a/src/NightMood.css
+++ b/src/NightMood.css
@@ -2,7 +2,7 @@
   background-color: #b9aebe00;
   border-color: #b9aebe;
   border-radius: 5px;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   padding: 6px;
