--- a/src/WeatherForcast.css
+++ b/src/WeatherForcast.css
@@ -9,9 +9,15 @@
   margin: 0 auto;
 }
 
-.WeatherForcast .col-2 {
+.WeatherForcast .col-sm-2 {
   margin: 10px;
   background: rgba(185, 174, 190, 0.73);
   border-radius: 5px;
   padding: 10px;
+}
+
+@media (max-width: 480px) {
+  .WeatherForcast .col-sm-2 {
+    margin: 10px auto;
+  }
 }
