--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@ body.dark {
   font-size: 11px;
   margin: 10px 0;
 }
+.App footer a {
+  text-decoration: none;
+  color: black;
+}
+.App footer a:hover {
+  color: rgb(121, 12, 168);
+}
